# ProdMCP

./: .fossa.yml  .gitignore  CHANGELOG.md  LICENSE  README.md  coverage.xml  pyproject.toml  release_notes.md  reorganize_tests.sh  sonar-project.properties  test_fastmcp.py
.agents/skills/adk_prodmcp/: SKILL.md
.agents/skills/prodmcp/: SKILL.md
.github/workflows/: codeql.yml  fossa.yml  sonarcloud.yml
.scannerwork/: report-task.txt
.scannerwork/architecture/py/: src-prodmcp-__init___py.udg  src-prodmcp-app_py.udg  src-prodmcp-dependencies_py.udg  src-prodmcp-exceptions_py.udg  src-prodmcp-fastapi_py.udg  src-prodmcp-middleware_py.udg  src-prodmcp-openmcp_py.udg  src-prodmcp-router_py.udg  src-prodmcp-schemas_py.udg  src-prodmcp-security-__init___py.udg  src-prodmcp-security-api_key_py.udg  src-prodmcp-security-base_py.udg  src-prodmcp-security-http_py.udg  src-prodmcp-security-oauth2_py.udg  src-prodmcp-security-open_id_py.udg  src-prodmcp-validation_py.udg  tests-__init___py.udg  tests-debug2_py.udg  tests-debug3_py.udg  tests-debug_py.udg  tests-test_common_decorator_py.udg  tests-test_constructor_py.udg  tests-test_decorators_py.udg  tests-test_deferred_registration_py.udg  tests-test_dependencies_py.udg  tests-test_edge_cases_py.udg  tests-test_fastapi_py.udg  tests-test_http_methods_py.udg  tests-test_imports_py.udg  tests-test_integration_py.udg  tests-test_mcp_bridge_py.udg  tests-test_middleware_py.udg  tests-test_migration_compat_py.udg  tests-test_openmcp_py.udg  tests-test_run_method_py.udg  tests-test_schemas_py.udg  tests-test_security_py.udg  tests-test_stacking_py.udg  tests-test_unified_router_py.udg  tests-test_validation_py.udg
.scannerwork/ir/python/: collected.metadata  collected.typedefs  ir_000000041.ir  ir_000000042.ir  ir_000000043.ir  ir_000000044.ir  ir_000000045.ir  ir_000000046.ir  ir_000000047.ir  (+112 more)
examples/: auth_example.py  basic_server.py  fastapi_migration.py  fastmcp_migration.py  middleware_example.py  openmcp_example.py  prompt_example.py  resource_example.py  sse_example.py  unified_example.py  validation_example.py
src/prodmcp/: __init__.py  app.py  dependencies.py  exceptions.py  fastapi.py  middleware.py  openmcp.py  router.py  schemas.py  security.py  validation.py
tests/: __init__.py  debug.py  debug2.py  debug3.py  test_common_decorator.py  test_constructor.py  test_decorators.py  test_deferred_registration.py  test_dependencies.py  test_edge_cases.py  test_fastapi.py  test_http_methods.py  test_imports.py  test_integration.py  test_mcp_bridge.py  test_middleware.py  test_migration_compat.py  test_openmcp.py  test_run_method.py  test_schemas.py  test_security.py  test_stacking.py  test_unified_router.py  test_validation.py  tests.md
tests/bridge/: test_bug8.py  test_fastapi_bridge.py  test_mcp_test_bridge.py  test_unified_router.py
tests/compat/: test_migration_compat.py
tests/core/: test_common_decorator.py  test_deferred_registration.py  test_dependencies.py  test_edge_cases.py  test_imports.py  test_stacking.py
tests/integration/: test_server_modes.py
tests/middleware/: test_middleware.py
tests/regression/: test_regression_pass1.py  test_regression_pass2.py
tests/security/: test_security.py
tests/spec/: test_openmcp_spec.py
tests/transport/: test_run_method.py
tests/validation/: test_schemas.py
(+190 files in other folders)
