[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prodmcp"
version = "0.3.7"
description = "Unified production framework for both REST APIs and MCP servers. Drop-in replacement for FastAPI and FastMCP with schema validation, security, middleware, and OpenMCP spec generation."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Anish Chelliah CR", email = "anishchelliah.cr@gmail.com"},
]
keywords = ["mcp", "fastmcp", "fastapi", "schema", "validation", "openmcp", "unified", "rest", "api", "pydantic", "middleware", "security"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
dependencies = [
    "fastmcp>=3.2.0",
    "pydantic>=2.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "anyio>=4.0",   # E7 fix: required by pytest-asyncio auto mode; was only available
                   # transitively through fastmcp. Declared explicitly for bare [dev] installs.
]
rest = [
    "fastapi>=0.109.1",
    "uvicorn[standard]>=0.22.0",
]

[project.urls]
Homepage = "https://github.com/prodmcp/prodmcp"
Documentation = "https://github.com/prodmcp/prodmcp#readme"
Repository = "https://github.com/prodmcp/prodmcp"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
